# verify-sample-local-matching-services

./: .gitignore  .travis.yml  README.md  pre-commit.sh  test_clojure_yada.sh  test_csharp.sh  test_go.sh  test_haskell.sh  test_nancy.sh  test_python.sh  test_ruby.sh  test_visualbasic.sh
clojure/yada/: .gitignore  Dockerfile  README.md  project.clj  test.sh
csharp/: Dockerfile  LocalMatchingService.cs  Program.cs  README.md  Startup.cs  csharp.csproj  lms.csproj  test.sh
csharp/Controllers/: AccountCreationController.cs  MatchingServiceController.cs
csharp/Hacks/: ContentTypeHack.cs
csharp/Properties/: AssemblyInfo.cs  launchSettings.json
flask/: Dockerfile  local_matching_service.py  test.sh
go/: Dockerfile  accounts.go  init.go  matcher.go  schema.go  test.sh
go/handlers/: accountcreation.go  matchingservice.go  result.go
go/model/: store.go
haskell/: .gitignore  Dockerfile  Main.hs  haskell.cabal  test.sh
haskell/Controllers/: AccountCreationController.hs  MatchingController.hs
haskell/Models/: AccountCreationRequest.hs  AccountCreationResponse.hs  MatchingRequest.hs  MatchingResponse.hs
java-grizzly-jsonpath/: Dockerfile  pom.xml  test.sh
local-matching-service-tests/: pom.xml
nancy/: Dockerfile  LocalMatchingService.cs  README.md  lms.sln  packages.config  test.sh
nodejs/: Dockerfile  README.md  lms.js  lms.test.js  package.json  test.sh
python/: lms  test.sh
ruby/: Dockerfile  Gemfile  lms.rb  test.sh
visualbasic/: AssemblyInfo.vb  Dockerfile  LocalMatchingService.vb  README.md  lms.sln  lms.vbproj  test.sh
(+32 files in other folders)
