name:          haskell-verify-local-matching-service
version:       0.0.0
cabal-version: >= 1.8
build-type:    Simple

executable          haskell-verify-lms
    hs-source-dirs: .
    main-is:        Main.hs
    ghc-options:    -Wall -threaded -O2 -rtsopts -with-rtsopts=-N
    build-depends:  base   >= 4      && < 5
                  , scotty
                  , wai-extra
                  , aeson
                  , text
